[package]
name = "assignment"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "1.17.11"
solana-sdk = "1.17.11"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
spl-token = "4.0"
spl-associated-token-account = "2.3.0"
base64 = "0.21"
